--- a/Genetic_engineering_project.ipynb
+++ b/Genetic_engineering_project.ipynb
@@ -6,6 +6,7 @@
       "name": "Genetic_engineering_project.ipynb",
       "provenance": [],
       "toc_visible": true,
+      "machine_shape": "hm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,14 +33,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5a3b47fb-c01b-47ca-bf67-ed79eae965cd"
+        "outputId": "408567ba-8698-4a21-af0b-a3008a5ca380"
       },
       "source": [
         "# Mount google drive\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -57,17 +58,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a744a33f-533d-423f-aed8-39bec1750811"
+        "outputId": "f9ee13fa-4a10-4e71-d165-93d81b3a082d"
       },
       "source": [
         "%cd \"/content/drive/My Drive/Genetic_engineering_project\""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/content/drive/My Drive/Genetic_engineering_project\n"
+            "/content/drive/.shortcut-targets-by-id/1fRQiQ4vPDq3WW-oCXm5kwFbSGPbNpjl9/Genetic_engineering_project\n"
           ],
           "name": "stdout"
         }
@@ -80,49 +81,28 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1508ebcf-cd18-4256-9be6-c3f668855c09"
+        "outputId": "eb1bc5fc-e574-4a94-8277-2f71d16bf544"
       },
       "source": [
-        "!pip install --upgrade torch"
+        "!pip install --upgrade torch\n",
+        "!pip install --upgrade skorch"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already up-to-date: torch in /usr/local/lib/python3.6/dist-packages (1.7.0+cu101)\n",
-            "Requirement already satisfied, skipping upgrade: numpy in /usr/local/lib/python3.6/dist-packages (from torch) (1.18.5)\n",
+            "Requirement already satisfied, skipping upgrade: dataclasses in /usr/local/lib/python3.6/dist-packages (from torch) (0.7)\n",
             "Requirement already satisfied, skipping upgrade: future in /usr/local/lib/python3.6/dist-packages (from torch) (0.16.0)\n",
+            "Requirement already satisfied, skipping upgrade: numpy in /usr/local/lib/python3.6/dist-packages (from torch) (1.18.5)\n",
             "Requirement already satisfied, skipping upgrade: typing-extensions in /usr/local/lib/python3.6/dist-packages (from torch) (3.7.4.3)\n",
-            "Requirement already satisfied, skipping upgrade: dataclasses in /usr/local/lib/python3.6/dist-packages (from torch) (0.7)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "w5B-M4X3XlFJ",
-        "outputId": "e0fdcc33-4c7b-4e76-a4af-232f4dfc2818"
-      },
-      "source": [
-        "!pip install --upgrade skorch"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
             "Requirement already up-to-date: skorch in /usr/local/lib/python3.6/dist-packages (0.9.0)\n",
-            "Requirement already satisfied, skipping upgrade: tabulate>=0.7.7 in /usr/local/lib/python3.6/dist-packages (from skorch) (0.8.7)\n",
             "Requirement already satisfied, skipping upgrade: scipy>=1.1.0 in /usr/local/lib/python3.6/dist-packages (from skorch) (1.4.1)\n",
             "Requirement already satisfied, skipping upgrade: tqdm>=4.14.0 in /usr/local/lib/python3.6/dist-packages (from skorch) (4.41.1)\n",
             "Requirement already satisfied, skipping upgrade: numpy>=1.13.3 in /usr/local/lib/python3.6/dist-packages (from skorch) (1.18.5)\n",
             "Requirement already satisfied, skipping upgrade: scikit-learn>=0.19.1 in /usr/local/lib/python3.6/dist-packages (from skorch) (0.22.2.post1)\n",
+            "Requirement already satisfied, skipping upgrade: tabulate>=0.7.7 in /usr/local/lib/python3.6/dist-packages (from skorch) (0.8.7)\n",
             "Requirement already satisfied, skipping upgrade: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn>=0.19.1->skorch) (0.17.0)\n"
           ],
           "name": "stdout"
@@ -149,7 +129,7 @@
         "import warnings \n",
         "warnings.filterwarnings(\"ignore\")"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -159,18 +139,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ad363565-3f73-47e1-fbe4-97a308e91a52"
+        "outputId": "fb4417c8-e48b-4bc2-b59a-d493bf455a07"
       },
       "source": [
         "%ls -sh"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "total 802M\n",
-            "160K Genetic_engineering_project.ipynb  317M train_labels.csv\n",
+            "165K Genetic_engineering_project.ipynb  317M train_labels.csv\n",
             " 95M submission_format_3TFRxH6.csv      301M train_values.csv\n",
             " 91M test_values.csv\n"
           ],
@@ -198,7 +178,7 @@
         "test_set = pd.read_csv(\"test_values.csv\",index_col='sequence_id')\n",
         "train_labels = pd.read_csv(\"train_labels.csv\",index_col='sequence_id')"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -208,14 +188,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b2bb4512-4a88-4162-98ea-5f14ebe7eb8e"
+        "outputId": "b2f1f93a-88cf-4448-8e82-7277f0c02842"
       },
       "source": [
         "print(\"Shape of the trainset: \",trains_set.shape)\n",
         "print(\"Shape of the testset: \",test_set.shape)\n",
         "print(\"Shape of the train_labels: \", train_labels.shape)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -235,12 +215,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "683df055-be26-4027-af13-421149f09749"
+        "outputId": "9ce0f4ae-affc-4ce9-cc1d-549929a15657"
       },
       "source": [
         "trains_set.dtypes"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -292,7 +272,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -304,13 +284,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 248
         },
-        "outputId": "345c20a9-c68d-4d92-da6b-d04e05bb57fb"
+        "outputId": "6e360cbf-39b3-4252-9611-8a276dd420e9"
       },
       "source": [
         "### Visualize the head of the dataset\n",
         "trains_set.head()"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,7 +634,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -665,13 +645,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fd220068-b521-4725-d67d-73cdef00b0f9"
+        "outputId": "816f5ee8-f504-4a29-a015-ce0dd4d830ce"
       },
       "source": [
         "### Description of the sequence column \n",
         "trains_set.sequence.apply(len).describe()"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -691,7 +671,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 10
         }
       ]
     },
@@ -713,7 +693,7 @@
         "                                    xlim=(0,20000)) \n",
         "  plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -724,13 +704,13 @@
           "height": 551
         },
         "id": "k-6gGl0udg2y",
-        "outputId": "9df27cd4-6711-4a46-ab58-30608cf59641"
+        "outputId": "0116b588-c5d3-478c-89eb-16b92ffff843"
       },
       "source": [
         "for df in [trains_set,test_set]:\n",
         "  analyse_seq(df)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -766,7 +746,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 736
         },
-        "outputId": "eb6fd5a1-7c8a-4843-c242-6327e286804f"
+        "outputId": "fc9ba333-1610-475f-b720-7111d56ce15f"
       },
       "source": [
         "### Binary feature description of the dataset. \n",
@@ -778,7 +758,7 @@
         "ax.set_xlabel(\"Proportion of sequence\")\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -801,13 +781,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3cc22258-9ea5-42b0-e33f-2c4e378787e8"
+        "outputId": "3861c625-e395-4018-e73e-7e1c0e33dae2"
       },
       "source": [
         "### for the test case\n",
         "test_set.sequence.apply(len).describe()"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -827,7 +807,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 14
         }
       ]
     },
@@ -839,14 +819,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 228
         },
-        "outputId": "2fbc59e0-8675-4bb7-d597-3e463c5dbc8a"
+        "outputId": "d157c1f9-ea5e-481c-e84f-52a56443ca9a"
       },
       "source": [
         "### create dataframe for the label id\n",
         "label_id = pd.DataFrame(train_labels.idxmax(axis=1),columns=[\"Lab_id\"])\n",
         "label_id.head()"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -915,7 +895,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 15
         }
       ]
     },
@@ -926,13 +906,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2a32f0b0-9ac0-42e6-ab27-88feadb0a3f1"
+        "outputId": "862e1e09-7125-42ab-aa87-0bb97f86c28a"
       },
       "source": [
         "### multiple label scenario of each row in the dataset\n",
         "label_id.shape"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -944,7 +924,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 16
         }
       ]
     },
@@ -977,7 +957,7 @@
         "    x_.append(\" \".join(getKmers(row,size=6)))\n",
         "  return x_"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -990,7 +970,7 @@
         "x_train = preprocess_sequence(df= trains_set,column=\"sequence\")\n",
         "x_test = preprocess_sequence(df = test_set,column=\"sequence\")"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -1013,18 +993,46 @@
         "X_train  = cv.transform(x_train).toarray()\n",
         "X_test = cv.transform(x_test).toarray()"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MfzGVJPRxmz8"
+        "id": "MfzGVJPRxmz8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e016b764-7e7d-493a-c6df-6f7a1b344d46"
       },
       "source": [
-        ""
+        "X_train.shape , X_test.shape"
       ],
-      "execution_count": null,
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((63017, 15532), (18816, 15532))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "clmCgMsKwLJW"
+      },
+      "source": [
+        "del X_train , X_test"
+      ],
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1033,7 +1041,78 @@
         "id": "6xps2MWpxnuR"
       },
       "source": [
-        ""
+        "# from sklearn.preprocessing import StandardScaler\n",
+        "# sca = StandardScaler()\n",
+        "# sca.fit(trains_set.iloc[:,1:].values)\n",
+        "# rest_trainset = sca.transform(trains_set.iloc[:,1:].values)\n",
+        "# rest_testset = sca.transform(test_set.iloc[:,1:].values)\n",
+        "# combine_trainset = np.concatenate([X_train,rest_trainset],axis=1)\n",
+        "# combine_testset = np.concatenate([X_test,rest_testset],axis=1)"
+      ],
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XXu4QNwjwT_e"
+      },
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "xtrainset , xtestset, ytrain , ytest = train_test_split(X_train,train_labels.values,random_state=100,test_size=25)"
+      ],
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zpPbjw33wTav",
+        "outputId": "cdc0c67d-4a06-4293-df7e-db71b06054a2"
+      },
+      "source": [
+        "xtrainset.shape , xtestset.shape , ytrain.shape ,ytest.shape "
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((62992, 15532), (25, 15532), (62992, 1314), (25, 1314))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v33-n28s_bgp"
+      },
+      "source": [
+        "### Modeling phase "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OCsa4Q9GwTL_"
+      },
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.tree import DecisionTreeClassifier,ExtraTreeClassifier\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "\n",
+        "model = RandomForestClassifier(random_state=100)\n",
+        "model.fit(xtrainset,ytrain)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1041,27 +1120,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IDoNUy5lbyog"
+        "id": "IyEhdsci7G4I"
       },
       "source": [
-        "#### import the libraries. \n",
-        "import pandas as pd\n",
-        "from sklearn import model_selection\n",
-        "\n",
-        "#### KFold  crossvalidation \n",
-        "df = pd.read_csv(\"train.csv\")\n",
-        "df = df.dropna().reset_index(drop=True)\n",
-        "df[\"kfold\"] = -1\n",
-        "\n",
-        "df = df.sample(frac=1).reset_index(drop=True)\n",
-        "\n",
-        "kf = model_selection.StratifiedKFold(n_splits=5)\n",
-        "\n",
-        "for fold, (trn_, val_) in enumerate(kf.split(X=df, y=df.sentiment.values)):\n",
-        "  print(len(trn_), len(val_))\n",
-        "  df.loc[val_, 'kfold'] = fold\n",
-        "\n",
-        "df.to_csv(\"train_folds.csv\", index=False)"
+        ""
       ],
       "execution_count": null,
       "outputs": []
